--- a/Strings/AppResources.resx
+++ b/Strings/AppResources.resx
@@ -2673,4 +2673,8 @@ Check map for more information</comment>
     <value>HOME</value>
     <comment>Home</comment>
   </data>
+  <data name="Error.CannotOpenBrowser" xml:space="preserve">
+    <value>No browser is available to open this link. Ensure you have a browser installed, and contact support if the issue persists (error code {0})</value>
+    <comment>No browser is available to open this link - ensure you have a browser installed. Contact support if the issue persists (error code {0})</comment>
+  </data>
 </root>
